added url for call FilterView

--- a/todolist/templates/todolist/works.html
+++ b/todolist/templates/todolist/works.html
@@ -21,6 +21,7 @@
         {% csrf_token %}
         <button type="submit">submit</button>
     </form>
+<a href="{% url 'todolist:filter' %}">Filter form</a>
 
 </body>
 </html>
