--- a/todolist/templates/todolist/works.html
+++ b/todolist/templates/todolist/works.html
@@ -1,27 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'todolist/base.html' %}
+{% block title %}work lists{% endblock %}
 
-{% for obj in object_list %}
-    <div>
-        <p style="font-size:large">{{ obj.title }}</p>
-        <p style="font-size:small; color:#303841">{{ obj.description }}</p>
-        <p style="font-size:small; color:#303841">{{ obj.due_date }}</p>
-    </div>
-    <hr>
-    <br>
-{% endfor %}
+{% block main_content %}
+    {% for obj in object_list %}
+        <div class="container-sm mt-3">
+            <p style="font-size:large">{{ obj.title }}</p>
+            <p style="font-size:small; color:#303841">{{ obj.description }}</p>
+            <p style="font-size:small; color:#303841">{{ obj.due_date }}</p>
+        </div>
+        <hr>
+        <br>
+    {% endfor %}
 
-    <form id="form" method="POST" action="{% url 'todolist:list' %}">
+    <form style="margin-top:25px;" class="form-control" id="form" method="POST" action="{% url 'todolist:list' %}">
         {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit">submit</button>
+          <input class="btn btn-primary" id="button" type="submit">
     </form>
-<a href="{% url 'todolist:filter' %}">Filter form</a>
+    <br>
+    <a class="link-dark mx-3 fs-4 text" href="{% url 'todolist:filter' %}">Filter form</a>
+{% endblock %}
 
-</body>
-</html>
+{% block javascript %}
+ $(function () {
+    $("#due_date").datepicker({
+      format:'yyyy-mm-dd',
+    });
+  });
+{% endblock %}
