added footer block

--- a/todolist/templates/todolist/base.html
+++ b/todolist/templates/todolist/base.html
@@ -24,6 +24,11 @@
         </main>
     </div>
 
+    <footer>
+        {% block footer %}
+        {% endblock %}
+    </footer>
+
     <script>
         {% block javascript %}
         {% endblock %}
