--- a/todolist/templates/todolist/works.html
+++ b/todolist/templates/todolist/works.html
@@ -4,9 +4,8 @@
 {% block main_content %}
     {% for obj in object_list %}
         <div class="container-sm mt-3">
-            <p style="font-size:large">{{ obj.title }}</p>
-            <p style="font-size:small; color:#303841">{{ obj.description }}</p>
-            <p style="font-size:small; color:#303841">{{ obj.due_date }}</p>
+            <a href="{{ obj.get_absolute_url }}" style="font-size:large">{{ obj.title }}</a>
+            <p style="font-size:small; color:gray">{{ obj.due_date }}</p>
         </div>
         <hr>
         <br>
