--- a/todolist/templates/todolist/children.html
+++ b/todolist/templates/todolist/children.html
@@ -38,26 +38,13 @@
 </div>
 
 <h4 style="margin:30px 0 15px 85px;">Add Children</h4>
-  <div class="container-sm">
+  <div class="container-sm mb-5">
     <form style="margin:30px 0 15px 0; display:none;" id="form" method="POST" action="{% url 'todolist:get_children' work.pk %}">
       {{ form.as_p }}
       {% csrf_token %}
       <input class="btn btn-primary" id="button" type="submit">
     </form>
-    <button style="margin:15px 0 15px 0;" type="button" onclick="ShowForm()" id="Add-Child" class="btn btn-primary">Add Child +</button>
+    <button style="margin:15px 0 15px 0;" type="button" onclick="ShowForm()" id="Add-Work" class="btn btn-primary">Add Child +</button>
   </div>
 
-{% endblock %}
-
-{% block javascript %}
- $(function () {
-    $("#due_date").datepicker({
-      format:'yyyy-mm-dd',
-    });
-  });
-
-function ShowForm() {
-   document.getElementById('Add-Child').style.display = "none";
-   document.getElementById('form').style.display = "block";
-}
 {% endblock %}
