--- a/todolist/templates/todolist/children.html
+++ b/todolist/templates/todolist/children.html
@@ -42,9 +42,9 @@
     <form style="margin:30px 0 15px 0; display:none;" id="form" method="POST" action="{% url 'todolist:get_children' work.pk %}">
       {{ form.as_p }}
       {% csrf_token %}
-      <input class="btn btn-primary" id="button" type="submit">
+      <input class="btn btn-dark" id="button" type="submit">
     </form>
-    <button style="margin:15px 0 15px 0;" type="button" onclick="ShowForm()" id="Add-Work" class="btn btn-primary">Add Child +</button>
+    <button style="margin:15px 0 15px 0;" type="button" onclick="ShowForm()" id="Add-Work" class="btn btn-dark">Add Child +</button>
   </div>
 
 {% endblock %}
