--- a/todolist/templates/todolist/works.html
+++ b/todolist/templates/todolist/works.html
@@ -14,9 +14,9 @@
         <form style="display:none;" id="form" method="POST" action="{% url 'todolist:list' %}">
             {{ form.as_p }}
             {% csrf_token %}
-            <input class="btn btn-primary" id="button" type="submit">
+            <input class="btn btn-dark" id="button" type="submit">
         </form>
-        <button style="margin:15px 0 15px 0;" type="button" onclick="ShowForm()" id="Add-Work" class="btn btn-primary">Add Work +</button>
+        <button style="margin:15px 0 15px 0;" type="button" onclick="ShowForm()" id="Add-Work" class="btn btn-dark">Add Work +</button>
         <br>
     </div>
 {% endblock %}
