handle deleting comment

--- a/todolist/templates/todolist/children.html
+++ b/todolist/templates/todolist/children.html
@@ -19,7 +19,12 @@
           <button style="display: inline; margin:-85px 0 0 260px" class="btn btn-dark btn-sm" type="submit">Add</button>
       </form>
     {% for comment in comments %}
-        <p style="font-size:small; color:#303841" class="mx-3">{{ comment.comment }}</p>
+        <p style="font-size:small; display:inline; color:#303841" class="mx-3">{{ comment.comment }}</p>
+        <a href="{% url 'todolist:delete_comment' comment.pk %}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+            </svg>
+        </a>
     {% empty %}
         <p style="font-size:small; color:#303841" class="mx-3">There is no comment yet, you can add some</p>
     {% endfor %}
