--- a/todolist/templates/todolist/filter.html
+++ b/todolist/templates/todolist/filter.html
@@ -17,6 +17,25 @@
             <p style="font-size:large">{{ obj.title }}</p>
             <p style="font-size:small; color:#303841">{{ obj.description }}</p>
             <p style="font-size:small; display:inline; margin-right:10px; color:#303841">{{ obj.due_date }}</p>
+
+            <!-- Handle done form -->
+            {% if obj.done %}
+              <form style="display:inline; margin-right:15px" id="done" method="post" action="{% url 'todolist:done_work' obj.pk %}">
+                  {% csrf_token %}
+                  <label style="color:gray;">Done:</label>
+                  <input name="done" class="form-check-input" type="checkbox" onclick="send_true()" value="False" checked>
+                  <input type="hidden" value="filter" name="page">
+              </form>
+            {% else %}
+              <form style="display:inline; margin-right:15px" id="done_false" method="post" action="{% url 'todolist:done_work' obj.pk %}">
+                  {% csrf_token %}
+                  <label style="color:gray;">Done:</label>
+                  <input name="done" class="form-check-input" type="checkbox" value="True" onclick="send_false()">
+                  <input type="hidden" value="filter" name="page">
+              </form>
+            {% endif %}
+            <!-- end of the done form -->
+
             <a  class="link-secondary" href="{% url 'todolist:delete' obj.pk %}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
                     <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
@@ -26,12 +45,4 @@
         <hr>
         <br>
     {% endfor %}
-{% endblock %}
-
-{% block javascript %}
- $(function () {
-    $("#due_date").datepicker({
-      format:'yyyy-mm-dd',
-    });
-  });
 {% endblock %}
