adding title name

--- a/todolist/templates/todolist/todolist_update_form.html
+++ b/todolist/templates/todolist/todolist_update_form.html
@@ -1,5 +1,7 @@
 {%  extends 'todolist/base.html' %}
 
+{% block title %} Works' Updating {% endblock %}
+
 {% block main_content %}
 <div class="container-sm mt-2">
     <form method="post">
