Changing the Decription fo the website

--- a/todolist/templates/todolist/base.html
+++ b/todolist/templates/todolist/base.html
@@ -65,8 +65,8 @@
             {% block main_content %}
               <div  class="container-sm mt-3">
                   <h3>ToDoList App</h3>
-                  <p class="lead">This is a web application for plan your works and don't forget your works, we recommend you
-                      to make an account and plan your works.</p>
+                  <p class="lead">This is a web application for scheduling your tasks, and in order not to forget your tasks,
+                      we recommend that you create an account and plan your tasks. </p>
               </div>
             {% endblock %}
         </main>
