Adding Title to the Pages

--- a/register_login/templates/register_login/Profile.html
+++ b/register_login/templates/register_login/Profile.html
@@ -1,5 +1,7 @@
 {% extends 'todolist/base.html' %}
 
+{% block title %}Profile{% endblock %}
+
 {% block main_content %}
     <div class="container-sm mt-3">
         {% if confirmation.acceptance == False %}
