--- a/register_login/templates/register_login/register.html
+++ b/register_login/templates/register_login/register.html
@@ -1,5 +1,7 @@
 {% extends 'todolist/base.html' %}
 
+{% block title %}Authentication{% endblock %}
+
 {% block main_content %}
     <div class="container-sm mt-3">
         <form method="post">
