--- a/todolist/templates/todolist/children.html
+++ b/todolist/templates/todolist/children.html
@@ -1,5 +1,6 @@
 {% extends 'todolist/base.html' %}
-{% block title %}children{% endblock %}
+
+{% block title %}ToDoList Children{% endblock %}
 
 {% block main_content %}
   <div class="container-sm mt-3">
