--- a/todolist/templates/todolist/filter.html
+++ b/todolist/templates/todolist/filter.html
@@ -1,7 +1,6 @@
 {% extends 'todolist/base.html' %}
-{% load bootstrap5 %}
 
-{% block title %}hi{% endblock %}
+{% block title %}Tasks Filtering{% endblock %}
 
 
 {% block main_content %}
