--- a/todolist/templates/todolist/works.html
+++ b/todolist/templates/todolist/works.html
@@ -1,5 +1,6 @@
 {% extends 'todolist/base.html' %}
-{% block title %}work lists{% endblock %}
+
+{% block title %}Tasks List{% endblock %}
 
 {% block main_content %}
     {% for obj in object_list %}
