--- a/register_login/templates/register_login/getting_email_confirmation_password.html
+++ b/register_login/templates/register_login/getting_email_confirmation_password.html
@@ -1,5 +1,7 @@
 {% extends "todolist/base.html" %}
 
+{% block title %}Email Confirmation{% endblock %}
+
 {% block main_content %}
 <div class="container-sm mt-2">
     {{ subject }}
