--- a/todolist/templates/todolist/base.html
+++ b/todolist/templates/todolist/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>{% block title %}Title{% endblock %}</title>
+    <title>{% block title %}ToDoList{% endblock %}</title>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
